Fixes the bug: the button to open the apps sidebar is always visible

--- a/src/app/ws_requests/ws-requests-msgs/ws-requests-msgs.component.scss
+++ b/src/app/ws_requests/ws-requests-msgs/ws-requests-msgs.component.scss
@@ -2921,8 +2921,9 @@ span .conv-svg-icon {
   text-align: center;
   margin-bottom: 0px;
   padding-top: 2px;
-  margin-left: 31px;
-  margin-right: -31px;
+  // margin-left: 31px;
+  // margin-right: -31px;
+  margin-left: 53px;
 }
 
 // Custom scollbar fo the chat right sidebar
